// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Permit2: fetchDataPermit2 1`] = `
{
  "bornAt": 1591388241,
  "contract": null,
  "hasInteraction": true,
  "isDanger": false,
  "isEOA": false,
  "protocol": {
    "id": "uniswap2",
    "logo_url": "https://static.debank.com/image/project/logo_url/uniswap2/87a541b3b83b041c8d12119e5a0d19f0.png",
    "name": "Uniswap V2",
  },
  "rank": 65,
  "riskExposure": 20000000000,
  "token": {
    "amount": 7.625238,
    "chain": "eth",
    "credit_score": 18127653.217581443,
    "decimals": 6,
    "display_symbol": null,
    "id": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
    "is_core": true,
    "is_scam": false,
    "is_suspicious": false,
    "is_verified": true,
    "is_wallet": true,
    "logo_url": "https://static.debank.com/image/eth_token/logo_url/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48/fffcd27b9efff5a86ab942084c05924d.png",
    "name": "USD Coin",
    "optimized_symbol": "USDC",
    "price": 0.9998000399920016,
    "price_24h_change": 0.00009998000399924235,
    "protocol_id": "",
    "raw_amount": 7625238,
    "raw_amount_hex_str": "0x745a16",
    "symbol": "USDC",
    "time_at": 1533324504,
  },
}
`;

exports[`Permit2: fetchDataPermit2 2`] = `
{
  "bornAt": 1591388241,
  "contract": null,
  "hasInteraction": true,
  "id": "0x000000000022d473030f116ddee9f6b43ac78ba3",
  "isDanger": false,
  "isEOA": false,
  "protocol": {
    "id": "uniswap2",
    "logo_url": "https://static.debank.com/image/project/logo_url/uniswap2/87a541b3b83b041c8d12119e5a0d19f0.png",
    "name": "Uniswap V2",
  },
  "rank": 65,
  "receiverInWallet": false,
  "riskExposure": 20000000000,
  "sender": "0x5853ed4f26a3fcea565b3fbc698bb19cdf6deb85",
  "token": {
    "amount": 7.625238,
    "chain": "eth",
    "credit_score": 18127653.217581443,
    "decimals": 6,
    "display_symbol": null,
    "id": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
    "is_core": true,
    "is_scam": false,
    "is_suspicious": false,
    "is_verified": true,
    "is_wallet": true,
    "logo_url": "https://static.debank.com/image/eth_token/logo_url/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48/fffcd27b9efff5a86ab942084c05924d.png",
    "name": "USD Coin",
    "optimized_symbol": "USDC",
    "price": 0.9998000399920016,
    "price_24h_change": 0.00009998000399924235,
    "protocol_id": "",
    "raw_amount": 7625238,
    "raw_amount_hex_str": "0x745a16",
    "symbol": "USDC",
    "time_at": 1533324504,
  },
  "unexpectedAddr": null,
}
`;

exports[`Permit2: formatSecurityEnginePermit2 1`] = `
{
  "permit2": {
    "chainId": "eth",
    "deployDays": 1539,
    "hasInteracted": true,
    "isDanger": false,
    "isEOA": false,
    "riskExposure": 20000000000,
    "spender": "0xef1c6e67703c7bd7107eed8303fbe6ec2554bf6b",
  },
}
`;

exports[`Permit2: formatSecurityEnginePermit2 2`] = `
{
  "permit2": {
    "chainId": "eth",
    "deployDays": 1539,
    "hasInteracted": true,
    "isDanger": false,
    "isEOA": false,
    "riskExposure": 20000000000,
    "spender": "0xef1c6e67703c7bd7107eed8303fbe6ec2554bf6b",
  },
}
`;

exports[`Permit2: parseActionPermit2 1`] = `
{
  "actionType": "permit2_approve_token",
  "brand": undefined,
  "chainId": "1",
  "contractId": "0x000000000022d473030f116ddee9f6b43ac78ba3",
  "permit2": {
    "expire_at": 1680793842,
    "permit2_id": "0x000000000022d473030f116ddee9f6b43ac78ba3",
    "sig_expire_at": 1678203642,
    "spender": "0xef1c6e67703c7bd7107eed8303fbe6ec2554bf6b",
    "token": {
      "amount": 1.461501637330903e+42,
      "chain": "eth",
      "credit_score": 1143577.2678722953,
      "decimals": 6,
      "display_symbol": "",
      "id": "0xdac17f958d2ee523a2206206994597c13d831ec7",
      "is_core": true,
      "is_scam": false,
      "is_suspicious": false,
      "is_verified": true,
      "is_wallet": true,
      "logo_url": "https://static.debank.com/image/coin/logo_url/usdt/23af7472292cb41dc39b3f1146ead0fe.png",
      "name": "Tether USD",
      "optimized_symbol": "USDT",
      "permit2_allowance_amount": 1.157920892373162e+71,
      "permit2_allowance_raw_amount": "115792089237316195423570985008687907853269984665640564039457584007913129639935",
      "price": 1.00037,
      "price_24h_change": 0.00007997680672612944,
      "protocol_id": "",
      "raw_amount": "1461501637330902918203684832716283019655932542975",
      "symbol": "USDT",
      "time_at": 1511829681,
    },
  },
  "sender": "0x5853ed4f26a3fcea565b3fbc698bb19cdf6deb85",
}
`;

exports[`Permit2: parseActionPermit2 2`] = `
{
  "actionType": "permit2_approve_token",
  "brand": undefined,
  "chainId": "1",
  "contractId": "0x000000000022d473030f116ddee9f6b43ac78ba3",
  "permit2": {
    "expire_at": 1680793842,
    "permit2_id": "0x000000000022d473030f116ddee9f6b43ac78ba3",
    "sig_expire_at": 1678203642,
    "spender": "0xef1c6e67703c7bd7107eed8303fbe6ec2554bf6b",
    "token": {
      "amount": 1.461501637330903e+42,
      "chain": "eth",
      "credit_score": 1143577.2678722953,
      "decimals": 6,
      "display_symbol": "",
      "id": "0xdac17f958d2ee523a2206206994597c13d831ec7",
      "is_core": true,
      "is_scam": false,
      "is_suspicious": false,
      "is_verified": true,
      "is_wallet": true,
      "logo_url": "https://static.debank.com/image/coin/logo_url/usdt/23af7472292cb41dc39b3f1146ead0fe.png",
      "name": "Tether USD",
      "optimized_symbol": "USDT",
      "permit2_allowance_amount": 1.157920892373162e+71,
      "permit2_allowance_raw_amount": "115792089237316195423570985008687907853269984665640564039457584007913129639935",
      "price": 1.00037,
      "price_24h_change": 0.00007997680672612944,
      "protocol_id": "",
      "raw_amount": "1461501637330902918203684832716283019655932542975",
      "symbol": "USDT",
      "time_at": 1511829681,
    },
  },
  "sender": "0x5853ed4f26a3fcea565b3fbc698bb19cdf6deb85",
}
`;
